blocks/card-carousel/card-carousel.css
.card-carousel-container {
  overflow: hidden;
}

.card-carousel {
  position: relative;
  display: flex;
  flex-direction: column;
  gap: var(--spacing-pc-md);

  p {
    margin: 0;
    padding: 0;
    line-height: unset;
  }
}

.card-carousel-title-box {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-3xs);
  font-weight: var(--fontweight-medium);
}

.card-carousel-title-box > div:nth-child(1) {
  color: var(--color-primary-green-50);
  font-size: var(--fontsize-title2);
}

.card-carousel-title-box > div:nth-child(2) {
  font-size: var(--fontsize-pc-h3);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.card-carousel-viewport {
  width: 100%;

  &::-webkit-scrollbar{
    display:none
  }
}

.card-carousel-viewport ul{
  display: flex;
  gap: var(--spacing-sm);
  margin: 0;
  padding: 0;
  transition: transform 0.5s ease-in-out;
}

.card-carousel-viewport ul>li {
  box-sizing: border-box;
  list-style: none;
  border: 1px solid #8f8f8f;
  width: min(calc(205/var(--breakpoint-pc)*100vw), 205px);
  height: min(calc(200/var(--breakpoint-pc)*100vw), 200px);
  border-radius: var(--radius-pc-xl);
  cursor: pointer;
  background-color: white;
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  gap: var(--spacing-sm);
  padding: var(--size-16);

  .item {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
    gap: var(--spacing-xs);
    height: min(calc(168/var(--breakpoint-pc)*100vw), 168px);
    width: min(calc(173/var(--breakpoint-pc)*100vw), 173px);
    box-sizing: border-box;
    text-align: center;

    .item-picture {
      width: min(calc(100/var(--breakpoint-pc)*100vw), 100px);
      height: min(calc(100/var(--breakpoint-pc)*100vw),100px);
    }
  }

  .item-cta{
    display: none;
  }

  &.touch-start img{
    transform: scale(1.2);
    transition: transform 0.2s;
  }
}

.item-text {
  width: 100%;
  height: min(calc(44/var(--breakpoint-pc)*100vw), 44px);
  padding: var(--fontsize-caption1);
  font-size: var(--fontsize-body1);
  text-align: center;
  line-height: 1.5;
  font-weight: var(--fontweight-medium);

  p {
    /* width: min(calc(162/var(--breakpoint-pc)*100vw), 162px); */

    /* 兼容Laser home Cinema在一行 */
    white-space: nowrap;
  }
}

.text-left {
  .card-carousel-viewport ul>li {
    border: none;
    height: min(calc(260/var(--breakpoint-pc)*100vw), 260px);
    width: min(calc(262/var(--breakpoint-pc)*100vw), 262px);
    background-color: var(--color-hisense-grey-04);
    padding: var(--spacing-xs) var(--spacing-sm) var(--spacing-pc-md);
    box-sizing: border-box;
    cursor: auto;

    .item {
      flex: 1;
      display: flex;
      padding: 0;
      align-items: flex-start;
      justify-content: flex-start;
      gap: var(--spacing-3xs);
      height: 100%;
      width: 100%;
      text-align: left;

      .item-picture {
        width: min(calc(70/var(--breakpoint-pc)*100vw), 70px);
        height: min(calc(70/var(--breakpoint-pc)*100vw), 70px);
      }

      picture, img {
        display: block;
        width: 100%;
        height: 100%;
      }

      .item-text {
        flex: 1;
        text-align: start;
        padding: 0;

        p {
          line-height: 1.5;
          margin: 0;
          padding: 0;
          white-space: inherit;
        }

        p:nth-child(2) {
          font-size: var(--fontsize-body2);
          color: var(--color-hisense-grey-70);
          font-weight: normal;
        }
      }
    }

    .item-cta.show {
      display: block;
      width: fit-content;

      a {
        display: block;
        padding: 0 var(--spacing-xs);
        height: var(--size-30);
        line-height: var(--size-30);
        margin: 0;
        border: none;
        color: #fff;
        background-color: var(--color-primary-green-60);
        font-size: var(--fontsize-body3);
        font-weight: var(--fontweight-medium);
        text-decoration: none;
        box-sizing: border-box;
        border-radius: var(--size-100);
      }

      a:hover {
        background-color: var(--color-primary-green-40);
        color: white;
      }
    }

    p {
      text-align: left;
    }

  }
}

.card-carousel-pagination {
  display: none;
  justify-content: flex-end;
  align-items: end;
  gap: var(--spacing-2xs);

   button {
      width: min(calc(28 / var(--breakpoint-pc) * 100vw), 28px);
      height: min(calc(28 / var(--breakpoint-pc) * 100vw), 28px);
      border: none;
      background: transparent;
      cursor: pointer;
      transition: color 0.3s;
      flex-shrink: 0;
      display: flex;
      align-items: center;
      justify-content: center;
      padding: 0;

      > .disabled-icon {
       display: none;
      }
      
      > .click-icon {
        width: 100%;
        height: 100%;
        object-fit: contain;
      }

      &:disabled {
        cursor: not-allowed;

        > .click-icon {
          display: none;
        }

        > .disabled-icon {
          display: block;
        }
      }
    }
}

.card-carousel-pagination.show {
  display: flex;
}

@media (width < 860px) {
  .card-carousel-pagination.show {
    display: none;
  }

  .card-carousel {
    gap: var(--spacing-sm);
  }

  .card-carousel-title-box {
    > div:nth-child(1) {
      font-size: var(--fontsize-body1);
    }

    > div:nth-child(2) {
      font-size: var(--fontsize-title1);
    }
  }

  .card-carousel-viewport {
    overflow: visible;

    ul {
      gap: min(var(--spacing-xs), 16px);
    }

    ul>li {
      width: calc(240/var(--breakpoint-mobile)*100vw);
      height: calc(240/var(--breakpoint-mobile)*100vw);
      box-sizing: border-box;
      padding: var(--spacing-md) 0;
      border-radius: var( --radius-xl);

      .item {
        width: 100%;
        height: 100%;
        padding: 0;
        gap: var(--spacing-sm);

        .item-text {
          font-size: var(--fontsize-title2);
          height: var(--size-50);

          p {
            width: 100%;
          }
        }

        .item-picture {
          width: calc(100/var(--breakpoint-mobile)* 100vw);
          height: calc(100/var(--breakpoint-mobile)* 100vw);

          picture, img {
            width: 100%;
            height: 100%;
          }
        }
      }
    }

    .card-carousel-track {
      margin: 0 -18px;
      padding: 0 18px;
      overflow-x: scroll;
      scrollbar-width: none;
      -ms-overflow-style: none;
      scroll-snap-type: x mandatory; /* 强制水平吸附 */
      scroll-behavior: smooth;
    }
  }

  .text-left {
    .card-carousel-viewport ul > li {
      width: calc(240/var(--breakpoint-mobile)*100vw);
      height: calc(240/var(--breakpoint-mobile)*100vw);
      padding: var(--spacing-xs) var(--spacing-s2) var(--spacing-sm);
      flex-direction: column;
      align-items: flex-start;
      gap: var(--spacing-sm);
      box-sizing: border-box;
      
      .item {
        .item-text {
          font-size: var(--fontsize-body1);
          line-height: 130%;
          font-weight: var(--fontweight-medium);

          p:nth-child(2) {
            font-size: var(--fontsize-body3);
            line-height: 140%;
            color: var(--color-primary-grey-70);
            font-weight: var(--fontweight-light);
          }
        }

        .item-picture {
          width: var(--size-64);
          height: var(--size-64);
        }

        .item-cta.show {
          a {
            padding: var(--spacing-4xs) var(--spacing-s);
            border-radius: var(--size-100);
            line-height: 140%;
            height: var(--size-32);
          }
        }
      }
    }
  }
}

